# tidb-demo

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  rustftm.toml
.github/workflows/: infra-tidbdatalyerapi-master.yml
proto/: tidb.proto
resources/config/: config-development.json  config.json
src/: main.rs
src/configuration/: mod.rs  settings.rs
src/kafka/: consumer.rs  mod.rs  producer.rs
src/tidb_service/: service.rs
src/utils/: common.rs  logger.rs  mod.rs  sqlx.rs  tidb.rs
